Fixes for rouding angles to nearest sample
- Resolves issue with angles and startup
- Helped clean up the lint errors I was seeing

--- a/ouster_ros/CMakeLists.txt
+++ b/ouster_ros/CMakeLists.txt
@@ -3,19 +3,21 @@ project(ouster_ros)
 
 add_compile_options(-std=c++11 -Wall)
 
-find_package(catkin REQUIRED COMPONENTS
-  message_generation
-  std_msgs
-  sensor_msgs
-  pcl_ros
-  pcl_conversions
-  roscpp
-  ouster_client
+find_package(catkin REQUIRED
+  COMPONENTS
+  am_utils
   latency_testing
-)
+  message_generation
+  ouster_client
+  pcl_conversions
+  pcl_ros
+  roscpp
+  sensor_msgs
+  std_msgs
+  )
 
 add_message_files(DIRECTORY msg FILES PacketMsg.msg)
-generate_messages(DEPENDENCIES std_msgs sensor_msgs)
+generate_messages(DEPENDENCIES  sensor_msgs std_msgs)
 
 include_directories(
   include
@@ -23,14 +25,22 @@ include_directories(
 )
 
 catkin_package(
-  INCLUDE_DIRS include
-  LIBRARIES ouster_ros
-  CATKIN_DEPENDS pcl_ros pcl_conversions roscpp message_runtime std_msgs sensor_msgs
+  LIBRARIES ${PROJECT_NAME}
+  CATKIN_DEPENDS message_runtime pcl_conversions pcl_ros  roscpp  sensor_msgs std_msgs
 )
 
-add_library(ouster_ros STATIC src/os1_ros.cpp)
-target_link_libraries(ouster_ros ${catkin_LIBRARIES} amdelaystatistics rt)
-add_dependencies(ouster_ros ${PROJECT_NAME}_gencpp)
+add_library(${PROJECT_NAME} STATIC src/os1_ros.cpp)
+target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} )
+add_dependencies(${PROJECT_NAME} ${PROJECT_NAME}_gencpp)
 
 add_executable(os1_node src/os1_node.cpp)
-target_link_libraries(os1_node ouster_ros ${catkin_LIBRARIES})
+
+target_link_libraries(os1_node ${PROJECT_NAME} ${catkin_LIBRARIES})
+
+
+install(TARGETS os1_node ${PROJECT_NAME}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  )
+
