--- a/ouster_ros/package.xml
+++ b/ouster_ros/package.xml
@@ -14,13 +14,19 @@
   <build_depend>pcl_ros</build_depend>
   <build_depend>pcl_conversions</build_depend>
   <build_depend>ouster_client</build_depend>
-
+  <build_depend>latency_testing</build_depend>
+  <build_depend>am_utils</build_depend>
+  <build_export_depend>pcl_conversions</build_export_depend>
+  <build_export_depend>std_msgs</build_export_depend>
+  <build_export_depend>sensor_msgs</build_export_depend>
+  <build_export_depend>roscpp</build_export_depend>
+  <build_export_depend>pcl_ros</build_export_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>message_runtime</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>pcl_ros</exec_depend>
   <exec_depend>pcl_conversions</exec_depend>
-
+  <exec_depend>latency_testing</exec_depend>
   <export></export>
 </package>
