Fixes for installing the OS1.launch file

--- a/ouster_ros/CMakeLists.txt
+++ b/ouster_ros/CMakeLists.txt
@@ -44,3 +44,6 @@ install(TARGETS os1_node ${PROJECT_NAME}
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   )
 
+install(FILES os1.launch
+   DESTINATION "${CATKIN_PACKAGE_SHARE_DESTINATION}"
+   )
