Fixes for installing ouster scripts and v1.11  lidar functionality

--- a/ouster_ros/CMakeLists.txt
+++ b/ouster_ros/CMakeLists.txt
@@ -47,3 +47,8 @@ install(TARGETS os1_node ${PROJECT_NAME}
 install(FILES os1.launch
    DESTINATION "${CATKIN_PACKAGE_SHARE_DESTINATION}"
    )
+
+ install(DIRECTORY scripts/
+   DESTINATION "${CATKIN_PACKAGE_SHARE_DESTINATION}/scripts"
+   FILE_PERMISSIONS USE_SOURCE_PERMISSIONS
+   )
