--- a/ouster_ros/package.xml
+++ b/ouster_ros/package.xml
@@ -19,7 +19,7 @@
   <build_depend>tf2_geometry_msgs</build_depend>
   <build_depend>ouster_client</build_depend>
   <build_depend>ouster_viz</build_depend>
-
+  <build_depend>latency_testing</build_depend>
 
   <exec_depend>roscpp</exec_depend>
   <exec_depend>message_runtime</exec_depend>
