Fix for IMU leveling of pointclouds

--- a/ouster_ros/CMakeLists.txt
+++ b/ouster_ros/CMakeLists.txt
@@ -20,6 +20,7 @@ find_package(catkin REQUIRED COMPONENTS
   ouster_client
   tf2
   tf2_ros
+  tf2_msgs
   tf2_geometry_msgs
   latency_testing
 )
@@ -49,6 +50,11 @@ add_dependencies(ouster_ros ${PROJECT_NAME}_gencpp)
 add_executable(os1_node src/os1_node.cpp)
 target_link_libraries(os1_node ouster_ros ${catkin_LIBRARIES})
 add_dependencies(os1_node ${PROJECT_NAME}_gencpp)
+
+add_executable(tmp_node src/tmp.cpp)
+target_link_libraries(tmp_node ouster_ros ${catkin_LIBRARIES})
+add_dependencies(tmp_node ${PROJECT_NAME}_gencpp)
+
 
 add_executable(os1_cloud_node src/os1_cloud_node.cpp)
 target_link_libraries(os1_cloud_node ouster_ros ${catkin_LIBRARIES})
