--- a/ouster_ros/CMakeLists.txt
+++ b/ouster_ros/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_FLAGS         "-Wall -Wextra")
 set(CMAKE_CXX_FLAGS_DEBUG   "-O0 -g -DUSE_TRANSFORM ")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG -DUSE_TRANSFORM ")
+add_compile_options(-std=c++14)
 
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(jsoncpp REQUIRED jsoncpp)
