--- a/ouster_ros/launch/listener.yaml
+++ b/ouster_ros/launch/listener.yaml
@@ -4,3 +4,10 @@
     max_delay: 0.09
   red:
     mean_delay: 0.006
+/os1_cloud_node/ouster_pcl_delay:
+  yellow:
+    mean_delay: 0.06
+    max_delay: 0.07
+  red:
+    mean_delay: 0.08
+    max_delay: 0.10
