Installs yaml files

--- a/ouster_ros/CMakeLists.txt
+++ b/ouster_ros/CMakeLists.txt
@@ -75,3 +75,9 @@ install(DIRECTORY scripts/
   DESTINATION "${CATKIN_PACKAGE_SHARE_DESTINATION}/scripts"
   FILE_PERMISSIONS USE_SOURCE_PERMISSIONS
 )
+
+install(DIRECTORY launch/
+  DESTINATION "${CATKIN_PACKAGE_SHARE_DESTINATION}/launch"
+  FILE_PERMISSIONS USE_SOURCE_PERMISSIONS
+)
+
