--- a/ouster_ros/CMakeLists.txt
+++ b/ouster_ros/CMakeLists.txt
@@ -2,13 +2,13 @@ cmake_minimum_required(VERSION 3.1.0)
 project(ouster_ros)
 
 set(CMAKE_CXX_STANDARD 14)
-set(CMAKE_CXX_FLAGS         "-Wall -Wextra")
-set(CMAKE_CXX_FLAGS_DEBUG   "-O0 -g -DUSE_TRANSFORM ")
-set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG -DUSE_TRANSFORM ")
-add_compile_options(-std=c++14)
+set(CMAKE_CXX_FLAGS         "${CMAKE_CXX_FLAGS} -Wall -Wextra")
+set(CMAKE_CXX_FLAGS_DEBUG   "-O0 -g")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG")
 
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(jsoncpp REQUIRED jsoncpp)
+add_definitions(-DEXTRA_POINT_CLOUDS)
 
 find_package(catkin REQUIRED COMPONENTS
   message_generation
@@ -19,9 +19,9 @@ find_package(catkin REQUIRED COMPONENTS
   pcl_conversions
   roscpp
   ouster_client
+  # ouster_viz                   
   tf2
   tf2_ros
-  tf2_msgs
   tf2_geometry_msgs
   latency_testing
 )
@@ -41,7 +41,7 @@ catkin_package(
   CATKIN_DEPENDS
     roscpp message_runtime pcl_ros
     std_msgs sensor_msgs geometry_msgs
-    ouster_client latency_testing am_utils
+    ouster_client# ouster_viz
 )
 
 add_library(ouster_ros STATIC src/os1_ros.cpp)
@@ -52,32 +52,23 @@ add_executable(os1_node src/os1_node.cpp)
 target_link_libraries(os1_node ouster_ros ${catkin_LIBRARIES})
 add_dependencies(os1_node ${PROJECT_NAME}_gencpp)
 
-add_executable(tmp_node src/tmp.cpp)
-target_link_libraries(tmp_node ouster_ros ${catkin_LIBRARIES})
-add_dependencies(tmp_node ${PROJECT_NAME}_gencpp)
-
-
 add_executable(os1_cloud_node src/os1_cloud_node.cpp)
 target_link_libraries(os1_cloud_node ouster_ros ${catkin_LIBRARIES})
 add_dependencies(os1_cloud_node ${PROJECT_NAME}_gencpp)
 
-install(TARGETS ouster_ros os1_node os1_cloud_node ${PROJECT_NAME}
-  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+# add_executable(viz_node src/viz_node.cpp)
+# target_link_libraries(viz_node ${catkin_LIBRARIES})
+# add_dependencies(viz_node ${PROJECT_NAME}_gencpp)
+
+add_executable(img_node src/img_node.cpp)
+target_link_libraries(img_node ouster_ros ${catkin_LIBRARIES})
+add_dependencies(img_node ${PROJECT_NAME}_gencpp)
+
+install(TARGETS os1_node
+                os1_cloud_node
+                img_node
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-  )
-
-install(FILES os1.launch os1_bottom_pitch_-90degrees.launch os1_bottom.launch
-  DESTINATION "${CATKIN_PACKAGE_SHARE_DESTINATION}"
-  )
-
-install(DIRECTORY scripts/
-  DESTINATION "${CATKIN_PACKAGE_SHARE_DESTINATION}/scripts"
-  FILE_PERMISSIONS USE_SOURCE_PERMISSIONS
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
-
-install(DIRECTORY launch/
-  DESTINATION "${CATKIN_PACKAGE_SHARE_DESTINATION}/launch"
-  FILE_PERMISSIONS USE_SOURCE_PERMISSIONS
-)
-
+install(FILES os1.launch DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
