--- a/ouster_ros/package.xml
+++ b/ouster_ros/package.xml
@@ -18,7 +18,7 @@
   <build_depend>tf2_ros</build_depend>
   <build_depend>tf2_geometry_msgs</build_depend>
   <build_depend>ouster_client</build_depend>
-  <build_depend>ouster_viz</build_depend>
+  <!-- <build_depend>ouster_viz</build_depend> -->
   <build_depend>latency_testing</build_depend>
 
   <exec_depend>roscpp</exec_depend>
@@ -29,7 +29,7 @@
   <exec_depend>pcl_ros</exec_depend>
   <exec_depend>pcl_conversions</exec_depend>
   <exec_depend>ouster_client</exec_depend>
-  <exec_depend>ouster_viz</exec_depend>
+  <!-- <exec_depend>ouster_viz</exec_depend> -->
   <exec_depend>latency_testing</exec_depend>
   <exec_depend>am_utils</exec_depend>
 
