--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: ros-kinetic-am-ouster
 Section: misc
 Priority: extra
 Maintainer: info <info@automodality.com>
-Build-Depends: debhelper (>= 9.0.0), ros-kinetic-catkin, ros-kinetic-geometry-msgs, ros-kinetic-message-generation, ros-kinetic-nav-msgs, ros-kinetic-rosconsole, ros-kinetic-roscpp, ros-kinetic-rostime, ros-kinetic-sensor-msgs, ros-kinetic-std-msgs, ros-kinetic-latency-testing (>= 2.feature-BB-773.15), ros-kinetic-rospy, ros-kinetic-rostest
+Build-Depends: debhelper (>= 9.0.0), ros-kinetic-catkin, ros-kinetic-geometry-msgs, ros-kinetic-message-generation, ros-kinetic-nav-msgs, ros-kinetic-rosconsole, ros-kinetic-roscpp, ros-kinetic-rostime, ros-kinetic-sensor-msgs, ros-kinetic-std-msgs, ros-kinetic-latency-testing (>= 2.feature-BB-773.15), ros-kinetic-rospy, ros-kinetic-rostest, libgtest-dev
 Homepage: https://github.com/AutoModality/am-utils
 Standards-Version: 3.9.2
 
