--- a/debian/rules
+++ b/debian/rules
@@ -21,6 +21,8 @@ export DEB_CXXFLAGS_MAINT_APPEND=-DNDEBUG
 %:
 	dh $@ 
 
+
+
 override_dh_auto_configure:
 	# In case we're installing to a non-standard location, look for a setup.sh
 	# in the install tree that was dropped by catkin, and source it.  It will
@@ -47,8 +49,7 @@ override_dh_shlibdeps:
 	# In case we're installing to a non-standard location, look for a setup.sh
 	# in the install tree that was dropped by catkin, and source it.  It will
 	# set things like CMAKE_PREFIX_PATH, PKG_CONFIG_PATH, and PYTHONPATH.
-	if [ -f "/opt/ros/kinetic/setup.sh" ]; then . "/opt/ros/kinetic/setup.sh"; fi && \
-	dh_shlibdeps -l$(CURDIR)/debian/ros-kinetic-am-utils//opt/ros/kinetic/lib/
+	@echo "Ignoreing the shlibdeps"
 
 override_dh_auto_install:
 	# In case we're installing to a non-standard location, look for a setup.sh
