successfull imu levelling with the test node, only performs static transform

--- a/ouster_ros/CMakeLists.txt
+++ b/ouster_ros/CMakeLists.txt
@@ -24,6 +24,7 @@ find_package(catkin REQUIRED COMPONENTS
   tf2_geometry_msgs
   latency_testing
   rostest
+  vb_util_lib
 )
 
 add_message_files(FILES PacketMsg.msg)
@@ -115,3 +116,7 @@ endif(CATKIN_ENABLE_TESTING)
 
 
 install(DIRECTORY data    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION} )
+
+add_executable(lidar_imu_transformation_test src/lidar_imu_transformation_test)
+add_dependencies(lidar_imu_transformation_test ${catkin_EXPORTED_TARGETS} )
+target_link_libraries(lidar_imu_transformation_test ${catkin_LIBRARIES} vb_util_lib)
