Fixes for cloud node to debug print feature/PD-16

--- a/ouster_ros/CMakeLists.txt
+++ b/ouster_ros/CMakeLists.txt
@@ -25,6 +25,7 @@ find_package(catkin REQUIRED COMPONENTS
   tf2_ros
   tf2_geometry_msgs
   latency_testing
+  am_imu_utils
 )
 
 add_message_files(FILES PacketMsg.msg)
