Fixed launch files respawn (again) and ouster_test.py

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,10 @@ devel/
 logs/
 install/
 doc/
-.vscode
+debian/ros-kinetic-am-ouster*
+debian/source
+debian/*-stamp
+debian/files
+catkin_ws
+*~
+.vscode/
