--- a/ouster_ros/CMakeLists.txt
+++ b/ouster_ros/CMakeLists.txt
@@ -4,7 +4,8 @@ project(ouster_ros)
 set(CMAKE_CXX_STANDARD 14)
 
 # set(CMAKE_CXX_FLAGS         "${CMAKE_CXX_FLAGS} -Wall -Wextra")
-set(CMAKE_CXX_FLAGS_DEBUG   "-O0 -ggdb3")
+set(CMAKE_CXX_FLAGS         " -g -ggdb -O0")
+set(CMAKE_CXX_FLAGS_DEBUG   " -g -ggdb -O0")
 # set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG")
 
 find_package(PkgConfig REQUIRED)
