--- a/.github/workflows/story.yml
+++ b/.github/workflows/story.yml
@@ -8,6 +8,8 @@ jobs:
   build:
     runs-on: ubuntu-18.04
     steps:
+      - name: Clean Workspace
+        uses: AutoModality/action-clean@v1.0.1
       - uses: actions/checkout@v1
       - name: Package
         id: package
